--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文本记录</title>
+    <title>记录器</title>
     <style>
         body {
             display: flex;
@@ -88,7 +88,7 @@
         <button onclick="writeCookie()">写入</button>
     </div>
     
-    <div id="display"></div>
+    <div id="display" style="width: 100%;"></div>
     <script>
         // 写入 cookie
         function writeCookie() {
